K8 files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: kibana-ingress
spec:
  rules:
    - host: a4822c0b17f54443291693a22843bd29-1541813218.us-east-1.elb.amazonaws.com
      http:
        paths:
          - path: /* 
            pathType: Prefix
            backend:
              service:
                name: kibana-kibana
                port:
                  number: 5601
